queries.css
@media only screen and (max-width: 1144px) {
  .section-container {
    padding: 0 var(--spacing-md);
  }

  :root {
    --h1-size: 80px;
    --h1-height: 85px;
  }

  /* HERO SECTION */
  .hero-phone {
    height: 550px;
    transform: translateY(-60px);
  }

  .hero .col-left {
    width: 60%;
  }
  .hero .col-right {
    width: 40%;
  }
}

/* TABLET SIZE */
@media only screen and (max-width: 850px) {
  :root {
    --h1-size: 70px;
    --h1-height: 75px;
  }

  /* HERO SECTION */
  .hero-phone {
    transform: translateY(-85px);
  }

  /* PARTNERS SECTION */
  .partners-grid img {
    width: 100%;
    height: auto;
  }

  /* INTEGRATIONS SECTION */
  .integrations-section .col-left {
    width: 70%;
  }

  .integrations-section .col-right {
    width: 30%;
  }
}

@media only screen and (max-width: 768px) {
  :root {
    --h1-size: 58px;
    --h1-height: 65px;
    --h3-size: 34px;
    --h6-size: 16px;
  }

  /* NAVBAR */
  nav.navbar {
    margin: var(--spacing-sm) 0 var(--spacing-lg) 0;
  }

  .navbar .menu,
  .navbar .navbar-button {
    display: none;
  }

  .hamburger-button {
    width: 50px;
    height: 30px;
    background-color: rgba(250, 250, 250, 0.25);
    border-radius: 20px;
    /* 'display:flex;' will undo the 'display:none;' in the style.css */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .hamburger-button .bar {
    width: 18px;
    height: 2px;
    background-color: var(--bg-white);
    margin: 1px 0;
  }

  .hamburger-button:hover {
    cursor: pointer;
  }

  /* ************ */
  .navbar {
    margin: 0;
  }

  /* HERO SECTION  */
  #gradient-canvas {
    height: 820px;
  }

  main {
    margin: 0;
  }

  .hero .two-column {
    align-items: center;
  }

  .hero .col-left {
    width: 60%;
  }

  .hero .col-right {
    width: 40%;
  }

  .hero-phone {
    height: 450px;
    transform: translateX(32px);
  }

  /* UNIFIED PLATFORM SECTION */
  .unified-platform-section h2 {
    width: 100%;
  }

  /* INTEGRATIONS SECTION */
  .integrations-section .card-container {
    flex-direction: column;
  }

  .integrations-section .card-container .card {
    width: 100%;
  }

  #api-code {
    margin: 0 0 var(--spacing-lg) 0;
  }

  /* WHY SWIPE SECTION*/
  .why-swipe-section .card-container {
    flex-wrap: wrap;
  }
  .why-swipe-section .card-container .card {
    width: 50%;
    margin: var(--spacing-md) 0;
    padding: 0 var(--spacing-md);
  }

  /* GLOBAL SCALE SECTION */
  .global-section .card-container {
    flex-wrap: wrap;
    margin: var(--spacing-xl) 0;
  }

  .global-section .card-container .card {
    width: 50%;
    margin: var(--spacing-md) 0;
  }

  .global-section .two-column .col-left {
    width: 100%;
    margin: 0;
  }

  .virtual-events-section .col-left {
    height: 446px;
    padding: 0 var(--spacing-lg) 0 0;
  }

  /* GETTING STARTED SECTION */
  .getting-started-section .two-column {
    align-items: center;
  }

  .getting-started-section .col-right {
    flex-wrap: wrap;
  }

  .getting-started-section .col-right .card {
    width: 100%;
    margin: var(--spacing-md) 0;
  }

  .getting-started-section .col-left {
    padding: 0 var(--spacing-lg) 0 0;
  }
}

/* MOBILE SIZE */
@media only screen and (max-width: 585px) {
  :root {
    --h1-size: 58px;
    --h1-height: 64px;
    --h3-size: 34px;
    --h6-size: 16px;
  }

  .two-column {
    flex-direction: column;
  }

  .two-column .col-left {
    width: 100%;
  }

  .two-column .col-right {
    width: 100%;
    padding: 0;
  }

  /* NAVBAR */
  .navbar {
    margin: 0 0 var(--spacing-lg) 0;
  }

  /* HERO SECTION */
  #gradient-canvas {
    height: 830px;
  }

  main {
    margin: var(--spacing-lg) 0;
  }

  .hero .hero-phone-container {
    display: none;
  }

  /* PARTNERS SECTION */
  .partners-grid {
    grid-template-columns: 1fr 1fr;
    margin: var(--spacing-lg) 0;
  }

  /* UNIFIED PLATFORMS SECTION */

  .unified-platform-section {
    padding: var(--spacing-lg) 0;
  }

  /* INTEGRATIONS SECTION */
  .integrations-section {
    padding: var(--spacing-lg) 0;
  }

  .integrations-section::before {
    height: 950px;
  }

  .integrations-section .col-right {
    display: none;
  }

  /* WHY SWIPE SECTION */
  .why-swipe-section {
    padding: var(--spacing-lg) 0;
  }

  .why-swipe-section .card-container .card {
    width: 100%;
    margin: var(--spacing-sm) 0;
  }

  .why-swipe-section .card-container .card .icon {
    height: 35px;
  }

  /* GLOBAL SCALE SECTION */
  .global-section {
    padding: var(--spacing-xl) 0 0 0;
  }

  .global-section .card-container {
    margin: var(--spacing-lg) 0;
  }

  .global-section .card-container .card {
    width: 100%;
    margin: var(--spacing-sm) 0;
  }

  #globe {
    opacity: 10%;
  }

  /* VIRTUAL EVENTS SECTION */
  .virtual-events-section {
    padding: 0;
  }

  .virtual-events-section .swipe-sessions-card {
    margin: var(--spacing-lg) 0;
    width: 100%;
  }

  .virtual-events-section .swipe-sessions-card .secondary-text {
    width: 100%;
  }

  .virtual-events-section .swipe-sessions-card .card-top {
    height: 40%;
  }

  .virtual-events-section .col-left {
    height: 446px;
    padding: 0;
  }

  #sessions-logo {
    width: 300px;
  }

  /* GETTING STARTED SECTION */
  .getting-started-section {
    padding: var(--spacing-lg) 0;
  }

  /* FOOTER */
  .footer {
    padding: var(--spacing-lg) 0;
    margin: 0;
  }
  .footer .section-container {
    flex-wrap: wrap;
  }

  .footer .col {
    width: 50%;
    margin: var(--spacing-md) 0;
  }

  .footer .col a {
    font-size: 12px;
  }

  #footer-logo {
    width: 70px;
  }

  .footer .icon-link img {
    width: 18px;
  }
}

